# Code-samples-projects

Advanced Graphics/Lighting/: README.txt
Advanced Graphics/Lighting/CS300/srs/: main.cpp
Advanced Graphics/Lighting/CS300/srs/Camera/: Camera.cpp  Camera.h
Advanced Graphics/Lighting/CS300/srs/GameObjects/: GameObject.h  ObjectManager.h
Advanced Graphics/Lighting/CS300/srs/Inputs/: Inputs.cpp  Inputs.h
Advanced Graphics/Lighting/CS300/srs/Level/: Level.cpp  Level.h
Advanced Graphics/Lighting/CS300/srs/Light/: Light.cpp
Advanced Graphics/Lighting/CS300/srs/Model/: Model.cpp  Model.h
Advanced Graphics/Lighting/CS300/srs/Shaders/: fragment.fs  lightsfragment.fs  lightsvertex.vs  texturedfragment.fs  texturedvertex.vs  vertex.vs
Advanced Graphics/Lighting/CS300/srs/Textures/: Texture.cpp  Texture.h
Advanced Graphics/Lighting/CS300/srs/Window/: Window.cpp  Window.h
Advanced Graphics/Normal mapping/: README.txt
Advanced Graphics/Normal mapping/CS300/: CS300.vcxproj  CS300.vcxproj.filters
Advanced Graphics/Normal mapping/CS300/srs/Inputs/: Inputs.cpp
Advanced Graphics/Normal mapping/CS300/srs/Light/: Light.h
Advanced Graphics/Normal mapping/CS300/srs/Model/: Model.cpp
Advanced Graphics/Normal mapping/CS300/srs/Shaders/: texturedfragment.fs  texturedvertex.vs
Advanced Graphics/Normal mapping/CS300/srs/Textures/: Color.h  Texture.h
Advanced Graphics/Normal mapping/CS300/srs/Window/: Window.cpp  Window.h
Advanced Graphics/Reflection and Refraction/: CS300.sln  README.txt
Advanced Graphics/Reflection and Refraction/CS300/: CS300.vcxproj
Advanced Graphics/Reflection and Refraction/CS300/data/Shaders/: DebugShadows.fs  Reflection.fs  Refraction.fs  Refraction.vs  UVfragment.fs  fragment.fs  normalfragment.fs  simpleDepthShader.fs  skybox.vs  texturedvertex.vs
Advanced Graphics/Reflection and Refraction/CS300/srs/: main.cpp
Advanced Graphics/Reflection and Refraction/CS300/srs/Camera/: Camera.cpp  Camera.h
Advanced Graphics/Reflection and Refraction/CS300/srs/GameObjects/: GameObject.cpp
Advanced Graphics/Reflection and Refraction/CS300/srs/Inputs/: Inputs.cpp  Inputs.h
Advanced Graphics/Reflection and Refraction/CS300/srs/Level/: Level.cpp  Level.h
Advanced Graphics/Reflection and Refraction/CS300/srs/Light/: Light.cpp
Advanced Graphics/Reflection and Refraction/CS300/srs/Model/: Model.cpp  Model.h
Advanced Graphics/Shadows/: README.txt
Advanced Graphics/Shadows/CS300/srs/: main.cpp
BVH/: CMakeLists.txt  imgui.ini
BVH/src/: main.cpp
BVH/src/BVH/: bvh.cpp  bvh.hpp  nodes.cpp  nodes.hpp
BVH/src/Camera/: camera.cpp  camera.hpp
BVH/src/Editor/: editor.cpp  editor.hpp
BVH/src/GameObjects/: game_object.hpp
BVH/src/GameObjects/Transform/: transform.cpp  transform.hpp
BVH/src/Helpers/: pch.hpp
BVH/src/Render/: mesh.cpp  mesh.hpp  renderer.cpp  resources.hpp
BVH/src/Shader/: shader.cpp  shader.hpp
BVH/src/Window/: window.cpp  window.hpp
GJK/: CMakeLists.txt
GJK/resources/shaders/: color.fs
GJK/src/: main.cpp
GJK/src/BVH/: bvh.cpp
GJK/src/Camera/: camera.cpp
GJK/src/Editor/: editor.cpp  editor.hpp
GJK/src/GJK/: Minkowski.cpp  Minkowski.hpp  gjk3d.cpp  gjk3d.h  gjk_simplex.cpp  gjk_simplex.h
GJK/src/GameObjects/: game_object.cpp  game_object.hpp  object_manager.cpp
GJK/src/GameObjects/Transform/: transform.cpp  transform.hpp
GJK/src/Helpers/: file.cpp  file.hpp  imgui.hpp  math.hpp  opengl.cpp
GJK/src/Octree/: demo_octree.cpp  demo_octree.hpp  octree.hpp  octree.inl
GJK/src/Render/: mesh.cpp  mesh.hpp  mesh_data.cpp  mesh_data.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp
GJK/src/Shader/: shader.cpp
GJK/src/Test/: test_common.hpp  test_octree.cpp
GJK/src/Window/: window.cpp  window.hpp
Neural network/demo/: README.txt
Neural network/source/: FinalProject.sln  FinalProject.vcproj  FinalProject.vcxproj
Neural network/source/Maps/: Map_7.txt
Neural network/source/Source/: Enemy_student.cpp  MultiAnimation.cpp  Stdafx.h  global.h  movement.cpp  movement.h  movement_student.cpp  terrain.cpp  terrain.h  terrain_student.cpp  world.cpp
Octrees/: CMakeLists.txt  imgui.ini
Octrees/src/: main.cpp
Octrees/src/BVH/: bvh.cpp  bvh.hpp  nodes.hpp
Octrees/src/Camera/: camera.cpp  camera.hpp
Octrees/src/Editor/: editor.cpp  editor.hpp
Octrees/src/GameObjects/: game_object.hpp  object_manager.hpp
Octrees/src/GameObjects/Transform/: transform.cpp
Octrees/src/Helpers/: math.cpp
Octrees/src/Octree/: demo_octree.cpp  demo_octree.hpp  octree.cpp  octree.inl
Octrees/src/Render/: mesh.cpp  mesh.hpp  mesh_data.cpp  mesh_data.hpp  renderer.cpp  renderer.hpp  resources.hpp
Octrees/src/Shader/: shader.hpp
Octrees/src/Window/: window.cpp  window.hpp
(+23 files in other folders)
